--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "covid-19-tracker",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/anshul2807/covid-19_tracker_reactjs.git",
+  "homepage": "https://anshul2807.github.io/covid-19_tracker_reactjs/",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^4.2.4",
